test/mock_client_state.hpp
@@ -69,6 +69,7 @@ namespace wsrep
             , bf_abort_during_wait_()
             , bf_abort_during_fragment_removal_()
             , error_during_prepare_data_()
+            , error_during_fragment_removal_(false)
             , killed_before_certify_()
             , sync_point_enabled_()
             , sync_point_action_()
@@ -99,10 +100,13 @@ namespace wsrep
                 client_state_->after_rollback();
                 return 1;
             }
-            else
+
+            if (error_during_fragment_removal_)
             {
-                return 0;
+                return 1;
             }
+
+            return 0;
         }
 
         void will_replay() WSREP_OVERRIDE { will_replay_called_ = true; }
@@ -218,6 +222,7 @@ namespace wsrep
         bool bf_abort_during_wait_;
         bool bf_abort_during_fragment_removal_;
         bool error_during_prepare_data_;
+        bool error_during_fragment_removal_;
         bool killed_before_certify_;
         std::string sync_point_enabled_;
         enum sync_point_action
